# nearvember-challenge-7

./: .gitignore  Cargo.toml  index.html  package.json  prettier.config.js  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
assets/: index.3092be4b.js  index.4918e20e.css  index.4b209180.js  index.68cb9f43.js  index.6b37adf5.js  index.8e95d78e.js  index.962839f6.js  index.b0548358.css  index.c977766e.css  index.cb2ce8b2.js  index.d0a31d28.js  index.e3fc660a.css  index.eb4278b8.js  index.ed7df4fb.css  vendor.0e77b2c8.js  vendor.3257a139.js  vendor.b011e5e1.js  vendor.b98c3976.js  vendor.e139cbe9.js
contract/: lib.rs
scripts/: deploy.sh  pure-deploy.sh  test.sh
src/: App.tsx  index.css  lib.rs  main.tsx  near-utils.ts  utils.ts
